--- a/saveMoney.css
+++ b/saveMoney.css
@@ -19,7 +19,7 @@ body {
     width: 100%;
     height: 100%;
     z-index: -1;
-    animation: fadeIn 0.5s linear;
+    animation: fadeIn 0.3s linear;
 }
 
 .background {
@@ -29,9 +29,9 @@ body {
 
 .frame {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 2fr;
     width: auto;
-    height: 750px;
+    height: auto;
 }
 
 .display {
@@ -42,7 +42,7 @@ body {
 .left {
     grid-column: 1 / span 1;
     display: grid;
-    grid-template-rows: 1fr 6fr;
+    grid-template-rows: 1fr 1fr 6fr;
 }
 
 .title {
@@ -63,8 +63,29 @@ body {
     color: #fff;
 }
 
-.list {
+.goal {
     grid-row: 2 / span 1;
+    text-align: center;
+}
+
+.goal h2 {
+    display: inline-block;
+    margin-right: 10px;
+    color: #fff;
+}
+
+.goal input {
+    background-color: #aaa;
+}
+
+.goal span {
+    font-family: cursive;
+    font-size: 20px;
+    color: #fff;
+}
+
+.list {
+    grid-row: 3 / span 1;
     padding: 20px;
 }
 
@@ -95,40 +116,22 @@ body {
 /* left side */
 
 .right {
+    padding-top: auto;
+    height: 100%;
     grid-column: 2 / span 1;
     display: grid;
-    background-color: rgba(200, 200, 200, .3);
-    border: 1px #fff solid;
-    border-radius: 10px;
-    grid-template-rows: .3fr .3fr .3fr 5.5fr .5fr;
-}
-
-.goal {
-    grid-row: 1 / span 1;
-    text-align: center;
-}
-
-.goal h2 {
-    display: inline-block;
-    margin-right: 10px;
-    color: #fff;
-}
-
-.goal input {
-    background-color: #aaa;
-}
-
-.goal span {
-    font-family: cursive;
-    font-size: 20px;
-    color: #fff;
+    grid-template-rows: 1fr 1fr 5fr 1fr;
+    grid-row-gap: 20px;
 }
 
 .total {
-    grid-row: 2 / span 1;
+    grid-row: 1 / span 1;
     display: grid;
     grid-template-columns: 1fr 1fr;
     text-align: center;
+    background-color: rgba(200, 200, 200, .3);
+    border: 1px #fff solid;
+    border-radius: 10px;
 }
 
 .saved {
@@ -166,10 +169,13 @@ body {
 }
 
 .remain {
-    grid-row: 3 / span 1;
+    grid-row: 2 / span 1;
     display: grid;
     grid-template-columns: 1fr 1fr;
     text-align: center;
+    background-color: rgba(200, 200, 200, .3);
+    border: 1px #fff solid;
+    border-radius: 10px;
 }
 
 .remain_money {
@@ -207,11 +213,14 @@ body {
 }
 
 .monthly {
-    grid-row: 4 / span 1;
+    grid-row: 3 / span 1;
     display: grid;
     grid-template-rows: repeat(3, 1fr);
     text-align: center;
     color: #fff;
+    background-color: rgba(100, 100, 500, .7);
+    border: 1px solid #fff;
+    border-radius: 10px;
 }
 
 .first {
@@ -222,6 +231,15 @@ body {
 
 .firstY {
     grid-area: 1 / 1 / span 1 / span 13;
+    color: #f55;
+}
+
+.first .month {
+    color: #ff2;
+}
+
+.first .sum {
+    color: #f55;
 }
 
 .second {
@@ -232,6 +250,15 @@ body {
 
 .secondY {
     grid-area: 1 / 1 / span 1 / span 13;
+    color: #f55;
+}
+
+.second .month {
+    color: #ff2;
+}
+
+.second .sum {
+    color: #f55;
 }
 
 .last {
@@ -242,9 +269,38 @@ body {
 
 .lastY {
     grid-area: 1 / 1 / span 1 / span 13;
+    color: #f55;
 }
 
-.average {
-    grid-row: 5 / span 1;
-    background-color: red;
+.last .month {
+    color: #ff2;
 }
+
+.last .sum {
+    color: #f55;
+}
+/* monthly */
+
+.average {
+    grid-row: 4 / span 1;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    background-color: rgba(500, 100, 100, 0.7);
+    border: 1px #fff solid;
+    border-radius: 10px;
+    color: #fff;
+    text-align: center;
+}
+
+.ave_form {
+    margin: auto 0;
+}
+
+.ave_form .txt {
+    width: 250px;
+}
+
+.ave_deposit {
+    margin: auto 0;
+}
+/* average */
